--- a/29591/A/index.html
+++ b/29591/A/index.html
@@ -3,127 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Stock Market Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>Real-Time Stock Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
-            transition: background-color 0.5s, color 0.5s;
-        }
-        .dark-mode {
-            background-color: #333;
-            color: white;
-        }
-        .light-mode {
-            background-color: white;
-            color: black;
-        }
-        .card { margin: 10px 0; }
+        body { transition: background-color 0.3s, color 0.3s; }
+        .dark-theme { background-color: #333; color: #fff; }
+        .light-theme { background-color: #fff; color: #333; }
+        .chart-container { width: 100%; height: 300px; }
     </style>
 </head>
-<body class="light-mode">
+<body class="light-theme">
 <div class="container mt-4">
-    <button class="btn btn-light" id="themeToggle">Toggle Dark Mode</button>
-    <button class="btn btn-info" id="exportCSV">Export to CSV</button>
-
-    <canvas height="200" id="stockChart" width="400"></canvas>
-
-    <div id="indicesContainer"></div>
-
-    <div class="mt-4" id="newsContainer"></div>
+    <button onclick="toggleTheme()">Toggle Theme</button>
+    <button onclick="exportToCSV()">Export to CSV</button>
+    <div id="stockInfo"></div>
+    <div class="row">
+        <div class="col-md-8">
+            <canvas class="chart-container" id="stockChart"></canvas>
+        </div>
+        <div class="col-md-4">
+            <div id="newsFeed"></div>
+        </div>
+    </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
 <script>
-  const finnhubApiKey = 'YOUR_FINNHUB_API_KEY'; // Replace with your API key
-  const newsApiKey = 'YOUR_NEWSAPI_KEY'; // Replace with your API key
-  let stockChart;
+  const finnhubToken = 'YOUR_FINNHUB_API_KEY';
+  const newsApiToken = 'YOUR_NEWSAPI_KEY';
+  let chartInstance;
 
-  // Theme toggling
-  document.getElementById('themeToggle').addEventListener('click', function() {
-    document.body.classList.toggle('dark-mode');
-    document.body.classList.toggle('light-mode');
-  });
-
-  // Initialize Chart
-  const ctx = document.getElementById('stockChart').getContext('2d');
-  stockChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels: [],
-      datasets: [{
-        label: 'Stock Price',
-        data: [],
-        borderColor: 'rgb(75, 192, 192)',
-        tension: 0.1
-      }]
-    },
-    options: {
-      scales: {
-        x: {
-          type: 'time',
-          time: {
-            unit: 'minute'
-          }
-        }
-      }
-    }
-  });
-
-  async function fetchStockData(symbol = 'AAPL') {
-    const response = await fetch(`https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${finnhubApiKey}`);
-    const data = await response.json();
-    const time = new Date();
-    stockChart.data.labels.push(time);
-    stockChart.data.datasets[0].data.push(data.c);
-    if (stockChart.data.labels.length > 10) {
-      stockChart.data.labels.shift();
-      stockChart.data.datasets[0].data.shift();
-    }
-    stockChart.update();
+  function fetchStockData(symbol) {
+    fetch(`https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${finnhubToken}`)
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('stockInfo').innerText = `${symbol}: $${data.c}`;
+        updateChart(symbol);
+      });
   }
 
-  async function fetchIndices() {
-    const indices = [
-      { symbol: '^DJI', name: 'Dow Jones' },
-    ];
-
-    for (const index of indices) {
-      const response = await fetch(`https://finnhub.io/api/v1/quote?symbol=${index.symbol}&token=${finnhubApiKey}`);
-      const data = await response.json();
-      const container = document.getElementById('indicesContainer');
-      container.innerHTML += `<div class="card"><div class="card-body">${index.name}: ${data.c}</div></div>`;
-    }
+  function updateChart(symbol) {
+    fetch(`https://finnhub.io/api/v1/stock/candle?symbol=${symbol}&resolution=D&count=30&token=${finnhubToken}`)
+      .then(response => response.json())
+      .then(data => {
+        if (chartInstance) chartInstance.destroy();
+        const ctx = document.getElementById('stockChart').getContext('2d');
+        const chartData = {
+          labels: data.t.map(t => new Date(t * 1000).toLocaleDateString()),
+          datasets: [{
+            label: symbol,
+            data: data.c,
+            borderColor: 'rgb(75, 192, 192)',
+            tension: 0.1
+          }]
+        };
+        chartInstance = new Chart(ctx, {
+          type: 'line',
+          data: chartData,
+          options: { responsive: true }
+        });
+      });
   }
 
-  // Fetch News
-  async function fetchNews() {
-    const response = await fetch(`https://newsapi.org/v2/everything?q=stocks&apiKey=${newsApiKey}`);
-    const data = await response.json();
-    const newsContainer = document.getElementById('newsContainer');
-    data.articles.slice(0, 5).forEach(article => {
-      newsContainer.innerHTML += `<div class="card"><div class="card-body"><h5 class="card-title">${article.title}</h5><p class="card-text">${article.description}</p><a href="${article.url}" target="_blank" class="btn btn-primary">Read More</a></div></div>`;
-    });
+  function fetchNews() {
+    fetch(`https://newsapi.org/v2/everything?q=stocks&apiKey=${newsApiToken}`)
+      .then(response => response.json())
+      .then(data => {
+        let newsHtml = '';
+        data.articles.slice(0, 5).forEach(article => {
+          newsHtml += `<p><a href="${article.url}" target="_blank">${article.title}</a></p>`;
+        });
+        document.getElementById('newsFeed').innerHTML = newsHtml;
+      });
   }
 
-  document.getElementById('exportCSV').addEventListener('click', function() {
-    let csvContent = "data:text/csv;charset=utf-8,";
-    csvContent += "Timestamp,Price\n";
-    stockChart.data.labels.forEach((time, index) => {
-      const row = `${time.toISOString()},${stockChart.data.datasets[0].data[index]}\n`;
-      csvContent += row;
-    });
+  function toggleTheme() {
+    document.body.classList.toggle('dark-theme');
+    document.body.classList.toggle('light-theme');
+  }
+
+  function exportToCSV() {
+    const data = chartInstance.data.datasets[0].data;
+    const csvContent = "data:text/csv;charset=utf-8," +
+      data.map((e, index) => `${chartInstance.data.labels[index]},${e}`).join("\n");
     const encodedUri = encodeURI(csvContent);
     const link = document.createElement("a");
     link.setAttribute("href", encodedUri);
     link.setAttribute("download", "stock_data.csv");
     document.body.appendChild(link);
     link.click();
-  });
+  }
 
-  fetchStockData();
-  fetchIndices();
+  // Initial setup
+  fetchStockData('AAPL'); // Example stock, can be changed or made dynamic
   fetchNews();
-  setInterval(fetchStockData, 60000);
+  setInterval(() => fetchStockData('AAPL'), 60000); // Update stock every minute
+  setInterval(fetchNews, 3600000); // Update news every hour
 </script>
 </body>
 </html>
