--- a/29591/B/index.html
+++ b/29591/B/index.html
@@ -5,85 +5,103 @@
     <title>Stock Market Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.css" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; transition: background-color 0.3s, color 0.3s; }
-        .dark-mode { background-color: #333; color: #f0f0f0; }
-        #charts, #news { padding: 20px; }
-        canvas { background: white; }
-        .dark-mode canvas { background: #444; }
-        #themeToggle { position: fixed; right: 20px; top: 20px; }
+        :root {
+            --background-color: #ffffff;
+            --text-color: #000000;
+        }
+        body.dark-theme {
+            --background-color: #121212;
+            --text-color: #ffffff;
+        }
+        body {
+            background-color: var(--background-color);
+            color: var(--text-color);
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .container { max-width: 1200px; margin: auto; padding: 20px; }
+        .charts, .news { display: flex; flex-wrap: wrap; justify-content: space-around; }
+        .chart-container { width: 45%; margin: 10px; }
     </style>
 </head>
 <body>
-<button id="themeToggle" onclick="toggleTheme()">Toggle Theme</button>
-<div id="charts">
-    <canvas id="stockChart"></canvas>
-    <button onclick="exportToCSV()">Export to CSV</button>
+<div class="container">
+    <h1>Real-Time Stock Dashboard</h1>
+    <button onclick="toggleTheme()">Toggle Theme</button>
+    <div class="charts">
+        <div class="chart-container"><canvas id="stockChart"></canvas></div>
+        <div class="chart-container"><canvas id="indexChart"></canvas></div>
+    </div>
+    <div class="news">
+        <h2>Latest News</h2>
+        <div id="newsFeed"></div>
+    </div>
+    <button onclick="exportToCSV()">Export Data to CSV</button>
 </div>
-<div id="news"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-  const ctx = document.getElementById('stockChart').getContext('2d');
-  let chart = new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels: [],
-      datasets: [{
-        label: 'Stock Price',
-        borderColor: 'rgb(75, 192, 192)',
-        data: []
-      }]
-    },
-    options: {
-      responsive: true
-    }
-  });
+  const finnhubAPIKey = 'YOUR_FINNHUB_API_KEY';
+  const newsAPIKey = 'YOUR_NEWS_API_KEY';
 
-  function updateChart(data) {
-    chart.data.labels.push(new Date().toLocaleTimeString());
-    chart.data.datasets[0].data.push(data.currentPrice);
-    if (chart.data.labels.length > 10) { // Keep last 10 data points
-      chart.data.labels.shift();
-      chart.data.datasets[0].data.shift();
-    }
-    chart.update();
+  // Function to toggle theme
+  function toggleTheme() {
+    document.body.classList.toggle('dark-theme');
   }
 
-  // Mock fetch for Finnhub - replace with actual WebSocket or polling
-  function fetchStockPrice() {
-    fetch('https://finnhub.io/api/v1/quote?symbol=AAPL&token=YOUR_FINNHUB_API_KEY')
-      .then(response => response.json())
-      .then(data => updateChart({currentPrice: data.c}));
-  }
-
-  setInterval(fetchStockPrice, 5000); // Fetch every 5 seconds
-
-  function fetchNews() {
-    fetch('https://newsapi.org/v2/everything?q=stocks&apiKey=YOUR_NEWSAPI_KEY')
+  // Fetch stock data and update chart
+  function updateStockData(symbol, chartId) {
+    fetch(`https://finnhub.io/api/v1/quote?symbol=${symbol}&token=${finnhubAPIKey}`)
       .then(response => response.json())
       .then(data => {
-        let newsDiv = document.getElementById('news');
-        newsDiv.innerHTML = data.articles.slice(0, 5).map(article =>
-          `<div><h3>${article.title}</h3><p>${article.description}</p></div>`
-        ).join('');
+        const ctx = document.getElementById(chartId).getContext('2d');
+        new Chart(ctx, {
+          type: 'line',
+          data: {
+            labels: [new Date().toLocaleTimeString()],
+            datasets: [{
+              label: symbol,
+              data: [data.c],
+              borderColor: 'rgb(75, 192, 192)',
+              fill: false
+            }]
+          },
+          options: { responsive: true }
+        });
       });
   }
 
-  fetchNews();
-  setInterval(fetchNews, 60000); // Update news every minute
-
-  function toggleTheme() {
-    document.body.classList.toggle('dark-mode');
+  // Fetch news
+  function fetchNews() {
+    fetch(`https://newsapi.org/v2/everything?q=stock+market&apiKey=${newsAPIKey}`)
+      .then(response => response.json())
+      .then(data => {
+        let newsHtml = '';
+        data.articles.forEach(article => {
+          newsHtml += `<div><h3>${article.title}</h3><p>${article.description}</p></div>`;
+        });
+        document.getElementById('newsFeed').innerHTML = newsHtml;
+      });
   }
 
-  function exportToCSV() {
-    let csvContent = "data:text/csv;charset=utf-8,"
-      + chart.data.labels.map((_, i) =>
-        [chart.data.labels[i], chart.data.datasets[0].data[i]].join(',')
-      ).join('\n');
+  // Initial data fetch and chart setup
+  updateStockData('AAPL', 'stockChart');
+  updateStockData('^GSPC', 'indexChart'); // Example for S&P 500
+  fetchNews();
 
-    var encodedUri = encodeURI(csvContent);
-    var link = document.createElement("a");
+  // Periodic updates (you might want to use WebSockets for better real-time updates)
+  setInterval(() => {
+    updateStockData('AAPL', 'stockChart');
+    updateStockData('^GSPC', 'indexChart');
+  }, 60000); // Update every minute
+
+  // CSV Export function (basic implementation)
+  function exportToCSV() {
+    // This is a simplified version; you'd need to gather all data points
+    const csvContent = "data:text/csv;charset=utf-8,"
+      + "Time,Stock Price\n"
+      + new Date().toLocaleTimeString() + "," + document.querySelector('#stockChart').chart.data.datasets[0].data[0];
+    const encodedUri = encodeURI(csvContent);
+    const link = document.createElement("a");
     link.setAttribute("href", encodedUri);
     link.setAttribute("download", "stock_data.csv");
     document.body.appendChild(link); // Required for FF
