--- a/29864/Ideal/index.html
+++ b/29864/Ideal/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <title>CodePen - The Cube</title>
+    <title>The Cube Game</title>
     <meta content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0" name="viewport"><link href="./style.css" rel="stylesheet">
 
 </head>
