--- a/29861/Ideal/index.html
+++ b/29861/Ideal/index.html
@@ -1,34 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <title>CodePen - COLORON GAME</title>
-    <meta charset="utf-8">
-    <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <title>COLORON GAME: inspiring developers to use SVG Animations, ES6 and Flexbox</title>
-    <meta content="A game made to inspire developers to use GSAP, ES6 and Flexbox" name="description">
-    <meta content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-    <meta content="yes" name="apple-mobile-web-app-capable">
-
-    <link href="https://greghub.github.io/coloron/public/images/touch-icon-iphone.png" rel="apple-touch-icon">
-    <link href="https://greghub.github.io/coloron/public/images/touch-icon-ipad.png" rel="apple-touch-icon" sizes="76x76">
-    <link href="https://greghub.github.io/coloron/public/images/touch-icon-iphone-retina.png" rel="apple-touch-icon" sizes="120x120">
-    <link href="https://greghub.github.io/coloron/public/images/touch-icon-ipad-retina.png" rel="apple-touch-icon" sizes="152x152">
-
-    <meta content="summary_large_image" name="twitter:card">
-    <meta content="@CodePen" name="twitter:site">
-    <meta content="COLORON GAME: inspiring developers to use SVG Animations, ES6 and Flexbox" name="twitter:title">
-    <meta content="A game made to inspire developers to use GSAP, ES6 and Flexbox" name="twitter:description">
-    <meta content="@greghvns" name="twitter:creator">
-    <meta content="https://greghub.github.io/coloron/public/images/coloron-image.png" name="twitter:image">
-
-    <meta content="https://greghub.github.io/coloron/public/images/coloron-image.png" property="og:image">
-    <meta content="COLORON GAME: inspiring developers to use SVG Animations, ES6 and Flexbox" property="og:title">
-    <meta content="https://codepen.io/gregh/pen/yVLOyO" property="og:url">
-    <meta content="CodePen" property="og:site_name">
-    <meta content="A game made to inspire developers to use GSAP, ES6 and Flexbox" property="og:description"><link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900' rel='stylesheet'>
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet'><link href="./style.css" rel="stylesheet">
-
+    <title>COLORON GAME</title>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet'>
 </head>
 <body>
 <style>
