--- a/29861/Ideal/index.html
+++ b/29861/Ideal/index.html
@@ -1065,7 +1065,7 @@
 
 </div>
 <script src='https://code.jquery.com/jquery-3.1.1.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
 <script>
   class Game {
 
