--- a/29764/A/index.html
+++ b/29764/A/index.html
@@ -4,163 +4,167 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Event Manager</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { font-family: 'Arial', sans-serif; background: #f4f4f9; }
-        .card { margin-bottom: 20px; }
+        body { font-family: 'Arial', sans-serif; }
+        .event-card { margin: 10px; }
         .card-img-top { height: 200px; object-fit: cover; }
-        .navbar { background-color: #343a40; }
-        .btn-outline-secondary:hover { background-color: #6c757d; color: white; }
-        .wishlist-count { background-color: red; color: white; border-radius: 50%; padding: 2px 6px; font-size: 12px; }
-        .pagination { justify-content: center; }
+        .wishlist-item { cursor: pointer; }
+        .liked { color: red; }
     </style>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-        <a class="navbar-brand" href="#">Event Manager</a>
-        <button class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Explore</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Wishlist <span class="wishlist-count" id="wishlistCount">0</span></a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
 <div class="container mt-4">
-    <input class="form-control mb-3" id="searchInput" placeholder="Search events..." type="text">
-    <div class="row mb-3">
-        <div class="col-md-4">
-            <select class="form-select" id="locationFilter">
-                <option value="">All Locations</option>
-                <!-- Options would be dynamically added -->
-            </select>
-        </div>
-        <div class="col-md-4">
-            <select class="form-select" id="categoryFilter">
-                <option value="">All Categories</option>
-                <!-- Options would be dynamically added -->
-            </select>
-        </div>
-        <div class="col-md-4">
-            <button class="btn btn-outline-secondary w-100" onclick="sortEvents()">Sort by Date</button>
-        </div>
+    <h1>Event Explorer & Wishlist</h1>
+
+    <!-- Filters and Search -->
+    <div class="mb-3">
+        <input class="form-control mb-2" id="searchInput" placeholder="Search events..." type="text">
+        <select class="form-control mb-2" id="filterLocation">
+            <option value="">All Locations</option>
+            <!-- Options will be dynamically filled -->
+        </select>
+        <select class="form-control mb-2" id="filterCategory">
+            <option value="">All Categories</option>
+            <!-- Options will be dynamically filled -->
+        </select>
+        <button class="btn btn-info" onclick="sortEvents('date')">Sort by Date</button>
     </div>
 
+    <!-- Events Section -->
     <div class="row" id="eventsContainer"></div>
 
-    <nav aria-label="Page navigation">
-        <ul class="pagination" id="pagination"></ul>
+    <!-- Pagination -->
+    <nav aria-label="Event pagination">
+        <ul class="pagination justify-content-center" id="pagination"></ul>
     </nav>
+
+    <!-- Wishlist Section -->
+    <h2>Wishlist</h2>
+    <div class="row" id="wishlistContainer"></div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
   const events = [
-    // This would typically be populated from a server or an API
-    {id: 1, name: "Tech Conference", date: "2023-10-15", location: "New York", category: "Technology", description: "A conference on emerging tech.", image: "tech.jpg"},
-    {id: 2, name: "Art Exhibition", date: "2023-11-20", location: "Los Angeles", category: "Art", description: "Explore modern art.", image: "art.jpg"},
-    // More events...
+    // Sample data as provided would be here or fetched from an API
   ];
 
-  const eventsPerPage = 6;
   let currentPage = 1;
-  let wishlist = new Set();
+  const eventsPerPage = 4;
+  let wishlist = JSON.parse(localStorage.getItem('wishlist')) || [];
 
-  function displayEvents(page) {
-    const container = document.getElementById('eventsContainer');
-    container.innerHTML = '';
+  function renderEvents(page = 1) {
+    const container = $('#eventsContainer');
+    container.empty();
     const startIndex = (page - 1) * eventsPerPage;
-    const selectedEvents = events.slice(startIndex, startIndex + eventsPerPage);
+    const endIndex = startIndex + eventsPerPage;
+    const pageEvents = events.filter(event =>
+      event.name.toLowerCase().includes($('#searchInput').val().toLowerCase()) &&
+      (event.location === $('#filterLocation').val() || $('#filterLocation').val() === '') &&
+      (event.category === $('#filterCategory').val() || $('#filterCategory').val() === '')
+    ).slice(startIndex, endIndex);
 
-    selectedEvents.forEach(event => {
+    pageEvents.forEach(event => {
       const card = `
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="${event.image}" class="card-img-top" alt="${event.name}">
-                    <div class="card-body">
-                        <h5 class="card-title">${event.name}</h5>
-                        <p class="card-text">Date: ${event.date}<br>Location: ${event.location}</p>
-                        <button onclick="alert('View Details for ${event.name}')" class="btn btn-info btn-sm">Details</button>
-                        <button onclick="toggleWishlist(${event.id})" class="btn btn-outline-secondary btn-sm">${wishlist.has(event.id) ? 'Remove from Wishlist' : 'Add to Wishlist'}</button>
-                        <button onclick="alert('Like functionality not implemented')" class="btn btn-outline-secondary btn-sm">❤️ Like</button>
-                    </div>
+        <div class="col-md-6 event-card">
+            <div class="card">
+                <img src="${event.image}" class="card-img-top" alt="${event.name}">
+                <div class="card-body">
+                    <h5 class="card-title">${event.name}</h5>
+                    <p><strong>Date:</strong> ${event.date} | <strong>Location:</strong> ${event.location}</p>
+                    <p>${event.description}</p>
+                    <button onclick="toggleLike(${event.id})" class="btn btn-outline-secondary">
+                        <i class="fa ${event.liked ? 'fa-heart' : 'fa-heart-o'}"></i>
+                    </button>
+                    <button onclick="addToWishlist(${event.id})" class="btn btn-primary">Add to Wishlist</button>
                 </div>
-            </div>`;
-      container.innerHTML += card;
+            </div>
+        </div>`;
+      container.append(card);
     });
 
     updatePagination();
-    updateWishlistCount();
   }
 
   function updatePagination() {
     const totalPages = Math.ceil(events.length / eventsPerPage);
-    const pagination = document.getElementById('pagination');
-    pagination.innerHTML = '';
+    const pagination = $('#pagination');
+    pagination.empty();
     for(let i = 1; i <= totalPages; i++) {
-      const li = document.createElement('li');
-      li.className = 'page-item' + (i === currentPage ? ' active' : '');
-      const link = document.createElement('a');
-      link.className = 'page-link';
-      link.href = '#';
-      link.onclick = () => { currentPage = i; displayEvents(currentPage); };
-      link.textContent = i;
-      li.appendChild(link);
-      pagination.appendChild(li);
+      pagination.append(`<li class="page-item ${currentPage === i ? 'active' : ''}"><a class="page-link" href="#" onclick="changePage(${i})">${i}</a></li>`);
     }
   }
 
-  function filterEvents() {
-    const search = document.getElementById('searchInput').value.toLowerCase();
-    const location = document.getElementById('locationFilter').value;
-    const category = document.getElementById('categoryFilter').value;
-
-    const filteredEvents = events.filter(event =>
-      (event.name.toLowerCase().includes(search) || event.description.toLowerCase().includes(search)) &&
-      (location === '' || event.location === location) &&
-      (category === '' || event.category === category)
-    );
-    events.length = 0; // Reset events array
-    events.push(...filteredEvents); // Add filtered events
-    currentPage = 1;
-    displayEvents(currentPage);
+  function changePage(page) {
+    currentPage = page;
+    renderEvents(page);
   }
 
-  function sortEvents() {
-    events.sort((a, b) => new Date(a.date) - new Date(b.date));
-    displayEvents(currentPage);
+  function toggleLike(id) {
+    const index = events.findIndex(e => e.id === id);
+    if(index !== -1) {
+      events[index].liked = !events[index].liked;
+      renderEvents(currentPage);
+    }
   }
 
-  function toggleWishlist(id) {
-    if (wishlist.has(id)) {
-      wishlist.delete(id);
+  function addToWishlist(id) {
+    if(!wishlist.includes(id)) {
+      wishlist.push(id);
+      localStorage.setItem('wishlist', JSON.stringify(wishlist));
+      renderWishlist();
     } else {
-      wishlist.add(id);
+      alert('Event already in wishlist!');
     }
-    displayEvents(currentPage);
   }
 
-  function updateWishlistCount() {
-    document.getElementById('wishlistCount').innerText = wishlist.size;
+  function renderWishlist() {
+    const wishlistContainer = $('#wishlistContainer');
+    wishlistContainer.empty();
+    wishlist.forEach(id => {
+      const event = events.find(e => e.id === id);
+      if(event) {
+        wishlistContainer.append(`
+            <div class="col-md-3 wishlist-item" onclick="removeFromWishlist(${id})">
+                <div class="card">
+                    <img src="${event.image}" class="card-img-top" alt="${event.name}">
+                    <div class="card-body">
+                        <h5 class="card-title">${event.name}</h5>
+                    </div>
+                </div>
+            </div>`);
+      }
+    });
   }
 
-  // Initial setup
-  document.getElementById('searchInput').addEventListener('keyup', filterEvents);
-  document.getElementById('locationFilter').addEventListener('change', filterEvents);
-  document.getElementById('categoryFilter').addEventListener('change', filterEvents);
+  function removeFromWishlist(id) {
+    wishlist = wishlist.filter(item => item !== id);
+    localStorage.setItem('wishlist', JSON.stringify(wishlist));
+    renderWishlist();
+    renderEvents(currentPage); // Refresh to update wishlist buttons
+  }
 
-  displayEvents(currentPage);
+  function sortEvents(by) {
+    events.sort((a, b) => new Date(a[by]) - new Date(b[by]));
+    renderEvents();
+  }
+
+  $(document).ready(function() {
+    // Populate filters
+    const locations = [...new Set(events.map(e => e.location))];
+    const categories = [...new Set(events.map(e => e.category))];
+    locations.forEach(loc => $('#filterLocation').append(`<option>${loc}</option>`));
+    categories.forEach(cat => $('#filterCategory').append(`<option>${cat}</option>`));
+
+    $('#searchInput, #filterLocation, #filterCategory').on('change keyup', function() {
+      renderEvents(1);
+    });
+
+    renderEvents();
+    renderWishlist();
+  });
 </script>
-
 </body>
 </html>
