--- a/29764/B/index.html
+++ b/29764/B/index.html
@@ -5,12 +5,12 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Event Manager</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <style>
         body { font-family: 'Arial', sans-serif; }
-        .event-card { margin: 10px; padding: 10px; border: 1px solid #ddd; border-radius: 8px; }
-        .event-image { width: 100%; border-radius: 4px; }
-        .wishlist-icon, .like-icon { cursor: pointer; }
-        .pagination { justify-content: center; }
+        .event-card { margin: 10px; padding: 15px; border: 1px solid #ddd; border-radius: 8px; }
+        .event-image { width: 100%; height: 150px; object-fit: cover; border-radius: 4px; }
+        .like-btn, .wishlist-btn { cursor: pointer; }
         @media (max-width: 768px) {
             .event-card { width: 100%; }
         }
@@ -18,99 +18,96 @@
 </head>
 <body>
 
-<div class="container">
-    <h1>Event Explorer</h1>
-    <!-- Search and Filters -->
+<div class="container mt-4">
+    <h1 class="text-center">Event Explorer</h1>
     <div class="mb-3">
         <input class="form-control" id="searchInput" placeholder="Search events..." type="text">
-        <select class="form-control mt-2" id="filterLocation">
-            <option value="">All Locations</option>
-            <!-- Options will be populated dynamically -->
-        </select>
-        <select class="form-control mt-2" id="filterCategory">
+    </div>
+    <div class="filters mb-3">
+        <select class="form-control mr-2" id="categoryFilter" style="display: inline-block; width: auto;">
             <option value="">All Categories</option>
         </select>
+        <select class="form-control" id="locationFilter" style="display: inline-block; width: auto;">
+            <option value="">All Locations</option>
+        </select>
     </div>
-
-    <!-- Events Section -->
-    <div id="eventsSection"></div>
-
-    <!-- Pagination -->
-    <nav aria-label="Event pagination">
-        <ul class="pagination" id="pagination"></ul>
-    </nav>
-
-    <!-- Wishlist Section -->
-    <h2>Wishlist</h2>
-    <div id="wishlistSection"></div>
+    <div class="row" id="eventsContainer"></div>
+    <ul class="pagination justify-content-center" id="pagination"></ul>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-  $(document).ready(function() {
-    const events = []; // Assume events are loaded here
-    let currentPage = 1;
-    const eventsPerPage = 6;
+  const events = [
+    // Your sample data here...
+  ];
 
-    function displayEvents(page) {
-      $('#eventsSection').empty();
-      const start = (page - 1) * eventsPerPage;
-      const end = start + eventsPerPage;
-      const paginatedEvents = events.slice(start, end);
+  let currentPage = 1;
+  const eventsPerPage = 4;
 
-      paginatedEvents.forEach(event => {
-        const card = `
-            <div class="col-md-4">
+  function renderEvents(page = 1) {
+    const container = $('#eventsContainer');
+    container.empty();
+    const start = (page - 1) * eventsPerPage;
+    const end = start + eventsPerPage;
+    const paginatedEvents = events.slice(start, end);
+
+    paginatedEvents.forEach(event => {
+      const card = `
+            <div class="col-md-6 col-lg-4">
                 <div class="card event-card">
                     <img src="${event.image}" class="card-img-top event-image" alt="${event.name}">
                     <div class="card-body">
                         <h5 class="card-title">${event.name}</h5>
-                        <p><strong>Date:</strong> ${event.date}</p>
-                        <p><strong>Location:</strong> ${event.location}</p>
-                        <button class="btn btn-info" onclick="alert('View Details: Not implemented')">Details</button>
-                        <span class="wishlist-icon" onclick="toggleWishlist(${event.id})">&#9825;</span>
-                        <span class="like-icon" onclick="alert('Like: Not implemented')">&#10084;</span>
+                        <p><i class="fas fa-calendar-alt"></i> ${event.date} | <i class="fas fa-map-marker-alt"></i> ${event.location}</p>
+                        <p class="card-text">${event.description}</p>
+                        <button class="btn btn-outline-primary like-btn ${event.liked ? 'active' : ''}" onclick="toggleLike(${event.id})"><i class="far fa-heart"></i></button>
+                        <button class="btn btn-outline-secondary wishlist-btn" onclick="addToWishlist(${event.id})"><i class="fas fa-star"></i></button>
                     </div>
                 </div>
             </div>`;
-        $('#eventsSection').append(card);
-      });
+      container.append(card);
+    });
 
-      updatePagination();
+    updatePagination(page);
+  }
+
+  function updatePagination(current) {
+    const totalPages = Math.ceil(events.length / eventsPerPage);
+    let pagination = $('#pagination');
+    pagination.empty();
+    for (let i = 1; i <= totalPages; i++) {
+      let li = $('<li class="page-item"><a class="page-link" href="#">' + i + '</a></li>');
+      if (i === current) li.addClass('active');
+      li.on('click', function() { renderEvents(i); });
+      pagination.append(li);
     }
+  }
 
-    function updatePagination() {
-      const pageCount = Math.ceil(events.length / eventsPerPage);
-      $('#pagination').empty();
-      for(let i = 1; i <= pageCount; i++) {
-        $('#pagination').append(`<li class="page-item ${i === currentPage ? 'active' : ''}"><a class="page-link" href="#" onclick="changePage(${i})">${i}</a></li>`);
-      }
-    }
+  function toggleLike(id) {
+    const event = events.find(e => e.id === id);
+    event.liked = !event.liked;
+    // Here you would typically update the server or local storage
+    renderEvents(currentPage);
+  }
 
-    function changePage(page) {
-      currentPage = page;
-      displayEvents(currentPage);
-    }
+  function addToWishlist(id) {
+    alert('Added to wishlist!'); // Placeholder for wishlist functionality
+  }
 
-    function toggleWishlist(eventId) {
-      // Logic to toggle event in wishlist, update UI or local storage
-      console.log('Adding/Removing event with ID:', eventId);
-    }
+  // Populate filters
+  const categories = [...new Set(events.map(e => e.category))];
+  const locations = [...new Set(events.map(e => e.location))];
+  categories.forEach(cat => $('#categoryFilter').append(new Option(cat, cat)));
+  locations.forEach(loc => $('#locationFilter').append(new Option(loc, loc)));
 
-    // Initial load
-    displayEvents(currentPage);
-
-    // Dummy event population for demonstration
-    for(let i = 1; i <= 20; i++) {
-      events.push({id: i, name: `Event ${i}`, date: '2023-10-10', location: `Location ${i}`, image: 'path_to_image.jpg'});
-    }
-
-    // Setup filters (you would dynamically populate these from your events)
-    ['New York', 'London', 'Tokyo'].forEach(loc => $('#filterLocation').append(new Option(loc, loc)));
-    ['Music', 'Sports', 'Conference'].forEach(cat => $('#filterCategory').append(new Option(cat, cat)));
+  $('#searchInput, #categoryFilter, #locationFilter').on('change', function() {
+    // Implement search and filter logic here
+    renderEvents(1); // Reset to first page on filter or search
   });
+
+  renderEvents();
 </script>
 
 </body>
