--- a/29864/Ideal/index.html
+++ b/29864/Ideal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>The Cube Game</title>
-    <meta content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0" name="viewport"><link href="./style.css" rel="stylesheet">
+    <meta content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0" name="viewport">
 
 </head>
 <body>
@@ -437,7 +437,7 @@
     </div>
 
 </div>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.min.js'></script>
 <script>
   const animationEngine = ( () => {
 
